Slight cleanup