@@ -19,9 +19,9 @@ import org.springframework.web.reactive.function.server.ServerResponse;
 import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 
 import static org.springframework.web.reactive.function.server.ServerResponse.status;
@@ -33,7 +33,7 @@ public class DemoPathingApi implements HandlerFunction<ServerResponse> {
     @Override
     public Mono<ServerResponse> handle(ServerRequest request) {
         var seed = Long.parseLong(request.queryParam(PARAM_SEED).orElse("0"));
-        var graphBuilder = new GraphBuilder(Arrays.asList(
+        var graphBuilder = new GraphBuilder(List.of(
                 new ParameterProcessor(),
                 new FlowProcessor(),
                 new ExitTrimProcessor(),
