@@ -4,13 +4,13 @@ import com.hileco.cortex.instructions.jumps.JUMP_DESTINATION;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class GraphTest {
 
     @Test
     public void test() {
-        var graph = new Graph(Arrays.asList(
+        var graph = new Graph(List.of(
                 new JUMP_DESTINATION(),
                 new JUMP_DESTINATION(),
                 new JUMP_DESTINATION()
